<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceExampleActivity">

    <Button
        android:id="@+id/btnStartService"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="150dp"
        android:text="@string/start"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnStopService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStopService"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="150dp"
        android:text="@string/stop"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnStartService"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_the_text"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/btnStopService"
        app:layout_constraintStart_toStartOf="@+id/btnStartService"
        app:layout_constraintTop_toBottomOf="@+id/btnStartService" />

    <Button
        android:id="@+id/btnSendData"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="150dp"
        android:text="@string/send_data"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edtData"
        app:layout_constraintStart_toStartOf="@+id/edtData"
        app:layout_constraintTop_toBottomOf="@+id/edtData" />

</androidx.constraintlayout.widget.ConstraintLayout>