<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnBroadcastReceiver"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="200dp"
        android:text="@string/broadcast_receiver"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnService"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="200dp"
        android:text="@string/service"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnContentProvider"
        app:layout_constraintEnd_toEndOf="@+id/btnBroadcastReceiver"
        app:layout_constraintStart_toStartOf="@+id/btnBroadcastReceiver"
        app:layout_constraintTop_toBottomOf="@+id/btnBroadcastReceiver" />

    <Button
        android:id="@+id/btnContentProvider"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/background_button_app_components"
        android:minWidth="200dp"
        android:text="@string/content_provider"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnService"
        app:layout_constraintStart_toStartOf="@+id/btnService"
        app:layout_constraintTop_toBottomOf="@id/btnService" />
</androidx.constraintlayout.widget.ConstraintLayout>