<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BroadcastExampleActivity">

    <LinearLayout
        android:id="@+id/SendingBroadcasts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSendingBroadcasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sending_broadcasts"
            android:textColor="@color/text_heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/btnSendMyBroadcast"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/background_button_app_components"
            android:text="@string/send_my_broadcast"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReceivingBroadcasts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/layout_background"
        android:backgroundTint="@color/background_button_app_components"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendingBroadcasts">

        <TextView
            android:id="@+id/tvReceivingBroadcasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/receiving_broadcasts"
            android:textColor="@color/text_heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/tv_received_broadcasts"
            android:layout_margin="10dp"
            android:layout_height="230dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvReceivedBroadcasts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:minHeight="200dp"
                    android:padding="5dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_gravity="center"
            android:id="@+id/btnClear"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/background_button_app_components"
            android:text="@string/clear"
            android:minWidth="150dp"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>